--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,15 @@ typings/
 
 # DynamoDB Local files
 .dynamodb/
+
+api/controllers/controladorBase.js
+
+api/routes/routes
+
+api/routes/routes.js
+
+api/test/otros/
+
+api/test/Postman/
+
+front/.directory
